force-app/main/default/objects/Customer_LTV__c/Customer_LTV__c.object-meta.xml
<CustomObject>
    <label>Customer LTV</label>
    <nameField>
        <label>LTV Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer LTVs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>