force-app/main/default/objects/Customer_LTV__c/fields/Acquisition_Channel_LTV__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Channel_LTV__c</fullName>
    <label>Acquisition Channel LTV</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>