force-app/main/default/objects/Customer_LTV__c/fields/Average_Transaction_Value__c.field-meta.xml
<CustomField>
    <fullName>Average_Transaction_Value__c</fullName>
    <label>Average Transaction Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>