force-app/main/default/objects/Customer_LTV__c/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Segment</label>
    <referenceTo>Customer_Segment__c</referenceTo>
    <relationshipLabel>Customer LTVs</relationshipLabel>
    <relationshipName>Customer_LTVs</relationshipName>
    <type>Lookup</type>
</CustomField>