force-app/main/default/objects/Customer_LTV__c/fields/Historical_LTV__c.field-meta.xml
<CustomField>
    <fullName>Historical_LTV__c</fullName>
    <label>Historical LTV</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>