force-app/main/default/objects/Customer_LTV__c/fields/LTV_Calculation_Date__c.field-meta.xml
<CustomField>
    <fullName>LTV_Calculation_Date__c</fullName>
    <label>LTV Calculation Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>