force-app/main/default/objects/Customer_LTV__c/fields/Months_Active__c.field-meta.xml
<CustomField>
    <fullName>Months_Active__c</fullName>
    <label>Months Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>