force-app/main/default/objects/Customer_LTV__c/fields/Predicted_LTV__c.field-meta.xml
<CustomField>
    <fullName>Predicted_LTV__c</fullName>
    <label>Predicted LTV</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>