force-app/main/default/objects/Customer_LTV__c/fields/Prediction_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Prediction_Confidence__c</fullName>
    <label>Prediction Confidence</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>